a los label les puse negrilla

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="form-container">
-        <h1>Configuración del Equipo</h1>
+        <h1>Inventarios de Equipos</h1>
         <form id="componentForm">
             <label for="ubicacion">Ubicación:</label>
             <select id="ubicacion" required>
